--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Abigail Zimmermann-Niefield</title>
+</head>
+<body>
 
+<h1>Abigail Zimmermann-Niefield</h1>
+<p>Williams College 2015 - CU Boulder</p>
+
+</body>
+</html>
