--- a/aboutme.html
+++ b/aboutme.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Abigail Zimmermann-Niefield</title>
-</head>
-<body>
-
-<h1>Abigail Zimmermann-Niefield</h1>
-<p>Williams College 2015 - CU Boulder</p>
-  <p title='About me'>Aspiring computer science education researcher.</p>
-
-</body>
+  <head>
+    <title>Abigail Zimmermann-Niefield</title>
+  </head>
+  <body>
+    <div>
+      <div>
+        <h1>Abigail Zimmermann-Niefield</h1>
+        <p>Williams College 2015 - CU Boulder</p>
+        <p>Aspiring computer science education researcher.</p>
+      </div>
+      <div>
+        <nav>
+        </nav>
+      </div>
+    </div>
+    <div>
+      <h1>Output</h1>  
+    </div>
+  </body>
 </html>
