--- a/aboutme.html
+++ b/aboutme.html
@@ -5,10 +5,12 @@
   </head>
   <body>
     <div>
-      <div>
+      <div style="background-color:powderblue;font-family:verdana;text-align:center;">
         <h1>Abigail Zimmermann-Niefield</h1>
-        <p>Williams College 2015 - CU Boulder</p>
-        <p>Aspiring computer science education researcher.</p>
+        <div>
+          <p>Williams College 2015 - CU Boulder</p>
+          <p>Aspiring computer science education researcher.</p>
+        </div>
       </div>
       <div>
         <nav>
