--- a/aboutme.html
+++ b/aboutme.html
@@ -5,9 +5,9 @@
   </head>
   <body>
     <div>
-      <div style="background-color:powderblue;font-family:verdana;text-align:center;">
+      <div style="background-color:powderblue;font-family:verdana;text-align:center;width=500px;">
         <h1>Abigail Zimmermann-Niefield</h1>
-        <div>
+        <div style="text-align:right;">
           <p>Williams College 2015 - CU Boulder</p>
           <p>Aspiring computer science education researcher.</p>
         </div>
