--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div>
-      <div style="background-color:powderblue;font-family:verdana;text-align:center;width=500px;">
+      <div style="background-color:powderblue;font-family:verdana;text-align:center;width:500px;">
         <h1>Abigail Zimmermann-Niefield</h1>
         <div style="text-align:right;">
           <p>Williams College 2015 - CU Boulder</p>
