Adding picture of me

--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,11 @@
   <body>
     <div>
       <div style="background-color:powderblue;font-family:verdana;text-align:center;width:500px;">
-        <h1>Abigail Zimmermann-Niefield</h1>
+        <h2>Abigail Zimmermann-Niefield</h2>
+        <div style="text-align:left;">
+          <img src="abbie.jpg" alt="Picture of Abbie"
+               style="width:304px;height:228px;">
+        </div>
         <div style="text-align:right;">
           <p>Williams College 2015 - CU Boulder</p>
           <p>Aspiring computer science education researcher.</p>
