--- a/aboutme.html
+++ b/aboutme.html
@@ -8,8 +8,7 @@
       <div style="background-color:powderblue;font-family:verdana;text-align:center;width:500px;">
         <h2>Abigail Zimmermann-Niefield</h2>
         <div style="text-align:left;">
-          <img src="abbie.jpg" alt="Picture of Abbie"
-               style="width:304px;height:228px;">
+          <img src="abbie.jpg" alt="Picture of Abbie">
         </div>
         <div style="text-align:right;">
           <p>Williams College 2015 - CU Boulder</p>
