--- a/aboutme.html
+++ b/aboutme.html
@@ -7,10 +7,10 @@
     <div>
       <div style="background-color:powderblue;font-family:verdana;text-align:center;width:500px;">
         <h2>Abigail Zimmermann-Niefield</h2>
-        <div style="text-align:left;">
-          <img src="abbie.jpg" alt="Picture of Abbie" style="width:200px;">
+        <div style="float:left;">
+          <img src="abbie.jpg" alt="Picture of Abbie" style="width:200px;height:150px;">
         </div>
-        <div style="text-align:right;width:200px;">
+        <div style="float:right;width:200px;">
           <p>Williams College 2015 - CU Boulder</p>
           <p>Aspiring computer science education researcher.</p>
         </div>
