Adding style block

--- a/aboutme.html
+++ b/aboutme.html
@@ -2,15 +2,27 @@
 <html>
   <head>
     <title>Abigail Zimmermann-Niefield</title>
+    <style>
+      .right {
+        float: right;
+        padding: 10px;
+        width:200px;
+      }
+      .left {
+        float: left;
+        padding: 10px;
+        width:200px;
+      }
+    </style>
   </head>
   <body>
     <div>
       <div style="background-color:powderblue;font-family:verdana;text-align:center;width:500px;">
         <h2>Abigail Zimmermann-Niefield</h2>
-        <div style="float:left;">
+        <div class="left">
           <img src="abbie.jpg" alt="Picture of Abbie" style="width:200px;height:150px;">
         </div>
-        <div style="float:right;width:200px;">
+        <div class="right">
           <p>Williams College 2015 - CU Boulder</p>
           <p>Aspiring computer science education researcher.</p>
         </div>
