--- a/aboutme.html
+++ b/aboutme.html
@@ -6,12 +6,13 @@
       .right {
         float: right;
         padding: 10px;
-        width:230px;
+        width:200px;
+        height:150px;
       }
       .left {
         float: left;
         padding: 10px;
-        width:230px;
+        width:250px;
       }
     </style>
   </head>
