--- a/aboutme.html
+++ b/aboutme.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div>
-      <div style="background-color:powderblue;font-family:verdana;text-align:center;width:500px;">
+      <div style="background-color:powderblue;font-family:verdana;text-align:center;">
         <h2>Abigail Zimmermann-Niefield</h2>
         <div class="left">
           <img src="abbie.jpg" alt="Picture of Abbie" style="width:200px;height:150px;">
@@ -28,12 +28,8 @@
           <p>Aspiring computer science education researcher.</p>
         </div>
       </div>
-      <div>
-        <nav>
-        </nav>
-      </div>
     </div>
-    <div>
+    <div style="font-family:verdana;text-align:center;">
       <h1>Output</h1>  
     </div>
   </body>
