Adding more divs

--- a/aboutme.html
+++ b/aboutme.html
@@ -18,14 +18,18 @@
   </head>
   <body>
     <div>
-      <div style="background-color:powderblue;font-family:verdana;text-align:center;">
-        <h2>Abigail Zimmermann-Niefield</h2>
-        <div class="left">
-          <img src="abbie.jpg" alt="Picture of Abbie" style="width:200px;height:150px;">
+      <div style="background-color:powderblue;font-family:verdana;">
+        <div style="text-align:center;">
+          <h2>Abigail Zimmermann-Niefield</h2>
         </div>
-        <div class="right">
-          <p>Williams College 2015 - CU Boulder</p>
-          <p>Aspiring computer science education researcher.</p>
+        <div>
+          <div class="left">
+            <img src="abbie.jpg" alt="Picture of Abbie" style="width:200px;height:150px;">
+          </div>
+          <div class="right">
+            <p>Williams College 2015 - CU Boulder</p>
+            <p>Aspiring computer science education researcher.</p>
+          </div>
         </div>
       </div>
     </div>
