Adding header div

--- a/aboutme.html
+++ b/aboutme.html
@@ -14,11 +14,16 @@
         width:200px;
         height:150px;
       }
+      #header {
+        width:500px;
+        height:200px;
+        background-color:#00aaaa;
+      }
     </style>
   </head>
   <body>
-      <div style="background-color:powderblue;font-family:verdana;">  
-        <div style="text-align:center;">
+      <div id="header">  
+        <div style="text-align:center;font-family:verdana;">
           <h2>Abigail Zimmermann-Niefield</h2>
         </div>
         <div>
@@ -31,8 +36,5 @@
           </div>
         </div>
       </div>
-    <div style="font-family:verdana;text-align:center;">
-      <h1>Output</h1>  
-    </div>
   </body>
 </html>
