Adding Header Image

--- a/aboutme.html
+++ b/aboutme.html
@@ -17,7 +17,9 @@
       #header {
         width:500px;
         height:200px;
-        background-color:#00aaaa;
+        background-image:url(https://s-media-cache-ak0.pinimg.com/736x/79/e8/db/79e8dbe5b67d36cc7f8c1f80167f8bb8--abstract-backgrounds-abstract-art.jpg);
+        background-repeat:no-repeat;
+        background-size:cover;
       }
     </style>
   </head>
