Making header better

--- a/aboutme.html
+++ b/aboutme.html
@@ -3,36 +3,25 @@
   <head>
     <title>Abigail Zimmermann-Niefield</title>
     <style>
-      .right {
-        float: right;
-        padding: 10px;
-        width:250px;
-      }
-      .left {
-        float: left;
-        padding: 10px;
-        width:200px;
-        height:150px;
-      }
       #header {
-        width:500px;
-        height:200px;
+        width:1400px;
+        height:250px;
         background-image:url(https://s-media-cache-ak0.pinimg.com/736x/79/e8/db/79e8dbe5b67d36cc7f8c1f80167f8bb8--abstract-backgrounds-abstract-art.jpg);
         background-repeat:no-repeat;
         background-size:cover;
+        text-align:center;
+        font-family:Verdana; 
+        color:white;
       }
     </style>
   </head>
   <body>
       <div id="header">  
-        <div style="text-align:center;font-family:verdana;">
+        <div>
           <h2>Abigail Zimmermann-Niefield</h2>
         </div>
         <div>
-          <div class="left">
-            <img src="abbie.jpg" alt="Picture of Abbie" style="width:200px;height:150px;">
-          </div>
-          <div class="right">
+          <div>
             <p>Williams College 2015 - CU Boulder</p>
             <p>Aspiring computer science education researcher.</p>
           </div>
