--- a/aboutme.html
+++ b/aboutme.html
@@ -1,32 +1,10 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Abigail Zimmermann-Niefield</title>
-    <style>
-      #header {
-        width:1100px;
-        height:200px;
-        background-image:url(https://s-media-cache-ak0.pinimg.com/736x/79/e8/db/79e8dbe5b67d36cc7f8c1f80167f8bb8--abstract-backgrounds-abstract-art.jpg);
-        background-repeat:no-repeat;
-        background-size:cover;
-        text-align:center;
-        border-radius: 25px;
-        font-family:Verdana; 
-        color:white;
-      }
-    </style>
-  </head>
-  <body>
-      <div id="header">  
-        <div>
-          <h2 style="font-size:36px">Abigail Zimmermann-Niefield</h2>
-        </div>
-        <div>
-          <div style="font-size:20px">
-            <p>Williams College 2015 - CU Boulder</p>
-            <p>Aspiring computer science education researcher.</p>
-          </div>
-        </div>
-      </div>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+    <img id="me" src="abbie.jpg" />
+</body>
 </html>
