Adding project page and buttons

--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
     <body>
         <div id="container">
             <div id="header">
-                <div>
-                    <div style="text-align:center;padding-top:0.3cm;">
+                <div id="title">
+                    <div style="text-align:center;padding-top:0.3cm;padding-left:1cm;">
                         <h2 style="font-size:36px">Abigail Zimmermann-Niefield </h2>
                         <h3 style="font-size:20px">CU Boulder Human Centered Computing</h3>
                     </div>
                 </div>
                 <div id="nav">
+                    <div class="button"><a href="aboutme.html">About Me</a></div>
+                    <div class="button">CV</div>
+                    <div class="button"><a href="projects.html">Projects</a></div>
+                    <div class="button">Blog</div>
+                    <div class="button">Resources</div>
                 </div>
             </div>
         </div>
